--- a/index.html
+++ b/index.html
@@ -232,7 +232,12 @@
         <p>Doctor of Medicine (Anticipated Graduation December 2025)</p>
     </div>
 
-  
+    <div class="box">
+        <h4>2021 - Present</h4>
+        <h3>MOH</h3>
+        <p>University of California, Davis School of Medicine</p>
+        <p>Doctor of Medicine (Anticipated Graduation December 2025)</p>
+    </div>
 </div>
 
 
